<resources>
    <string name="app_name" translatable="false">DCTimer</string>
    <string name="navigation_drawer_open" translatable="false">Navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation drawer close</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_session">Session manager</string>

    <string name="tab_timer">Timer</string>
    <string name="tab_result">Result</string>
    <string name="tab_session">Session</string>
    <string name="tab_settings">Settings</string>

    <string name="action_import_scramble">Import Scramble</string>
    <string name="action_export_scramble">Export Scramble</string>
    <string name="action_last">Last solve</string>
    <string name="action_session">Sessions</string>
    <string name="action_session_name">Rename session</string>
    <string name="action_clear">Clear session</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort">Sort order</string>
    <string name="action_histogram">Histogram</string>
    <string name="action_graph">Graph</string>
    <string name="action_daily">Daily Stats</string>
    <string name="action_import_export">Import/Export database</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="action_stackmat">Stackmat timer</string>
    <string name="action_smartcube">Smart cube</string>
    <string name="action_scramble">Scramble detail</string>

    <string name="scrambling">scrambling…</string>
    <string name="initializing">initializing</string>
    <string name="inspecting">INSPECTING</string>
    <string name="solving">SOLVING</string>
    <string name="time">time</string>
    <string name="no_penalty">No penalty</string>
    <string name="penalty_plus2">"+2"</string>
    <string name="penalty_dnf">DNF</string>
    <string name="comment">"Comment: "</string>
    <string name="session">"Session "</string>
    <string name="option">Options</string>
    <string name="ready">READY</string>
    <string name="session_mean">Session Mean(%1$s</string>
    <string name="show_time">"Time: "</string>
    <string name="session_name">Session name</string>
    <string name="select_session">Select session</string>
    <string name="add_session">Add session</string>
    <string name="default_session">Default session</string>
    <string name="session_clear">Clear</string>
    <string name="num_of_solve">"Number of solves: "</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="connect_fail">Connect failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status</string>
    <string name="select_device">Select device</string>
    <!-- Settings -->
    <string name="title_timer">TIMER</string>
    <string name="title_scramble">SCRAMBLE</string>
    <string name="title_stats">STATISTICS</string>
    <string name="title_tools">TOOLS</string>
    <string name="title_scheme">COLOR SCHEMES</string>
    <string name="scheme_cube">NxNxN</string>
    <string name="scheme_pyrm">Pyraminx</string>
    <string name="scheme_sq">Square-1</string>
    <string name="scheme_skewb">Skewb</string>
    <string name="scheme_reset">Reset</string>
    <string name="title_share">SHARE</string>
    <string name="title_interface">INTERFACE</string>
    <string name="select_color">Select color</string>
    <string name="title_gesture">GESTURE MANAGER</string>
    <string name="title_hardware">HARDWARE</string>
    <string name="eight_sec">8 seconds</string>
    <string name="twelve_sec">12 seconds</string>
    <string name="background_color">Background color</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <!-- Message -->
    <string name="exit_tip">Press again to exit.</string>
    <string name="copy_success">Copy to clipboard successfully.</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="sr_not_support">"The sampling rate can't work on this device."</string>
    <string name="conning">Connecting to the network…</string>
    <string name="network_error">Network error.</string>
    <string name="lastest_version">This is the latest version.</string>
    <string name="save_success">Save succeeded.</string>
    <string name="save_fail">Save failed.</string>
    <string name="file_not_exist">File not exists.</string>
    <string name="path_not_exist">Path not exists.</string>
    <string name="sdcard_not_exist">SD card not exists.</string>
    <string name="path_illegal">Illegal path.</string>
    <string name="file_error">File error.</string>
    <string name="import_fail">Import database failed.</string>
    <string name="import_success">Import database succeeded.</string>
    <string name="permission_deny">Permission denied</string>
    <string name="scan_device">Scanning device…</string>
    <string name="cube_not_connected">" is not connected"</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="search_hint">Search time or comment</string>
    <string name="delete_fail">Delete result failed.</string>
    <string name="new_session_best">"New session best: "</string>
    <string name="new_average_best">"New average best: "</string>
    <!-- Stats -->
    <string name="detail_avg">"Detailed statistics: Average of %1$d"</string>
    <string name="detail_mean">"Detailed statistics: Mean of %1$d"</string>
    <string name="detail_session_mean">Detailed statistics: Session Mean</string>
    <string name="stat_title">"Generated by DCTimer on "</string>
    <string name="stat_solve">"Cubes Solved: "</string>
    <string name="stat_avg">"Average: "</string>
    <string name="stat_mean">"Mean: "</string>
    <string name="stat_best">"Best Time: "</string>
    <string name="stat_worst">"Worst Time: "</string>
    <string name="stat_best_avg">"Best average of %1$d: "</string>
    <string name="stat_best_mean">"Best mean of %1$d: "</string>
    <string name="stat_list">"Individual Times: "</string>
    <string name="stat_session_avg">"Session Average: "</string>
    <string name="stat_session_mean">"Session Mean: "</string>
    <!-- Options -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_save">Save</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="btn_download">Download</string>
    <string name="btn_background">Run in background</string>
    <string name="btn_detail">Details</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Close without saving</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_mark_solve">Mark solved</string>
    <string name="btn_mark_scramble">Mark scrambled</string>
    <string name="btn_solution">Solution</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_done">Done</string>
    <string name="copy_scramble">Copy scramble</string>
    <string name="delete_time">Delete</string>
    <string name="reset_all">Reset All</string>
    <string name="new_version">"New version: "</string>
    <string name="confirm_delete_result">"Delete result: "</string>
    <string name="confirm_delete_last">"Delete last result: "</string>
    <string name="confirm_clear_session">Clear all times in this session?</string>
    <string name="confirm_delete_session">Delete this session?</string>
    <string name="confirm_reset">Are you sure?</string>
    <string name="time_dnf">Time: DNF</string>
    <string name="confirm_save">Save this time?</string>
    <string name="confirm_overwrite">File already exists. Overwrite?</string>
    <string name="delete_items">Delete selected items?</string>
    <string name="solve_none">None</string>
    <string name="cube2_face">Face</string>
    <string name="cube2_layer">Layer</string>
    <string name="side_u">U (white)</string>
    <string name="side_d">D (yellow)</string>
    <string name="side_l">L (orange)</string>
    <string name="side_r">R (red)</string>
    <string name="side_f">F (green)</string>
    <string name="side_b">B (blue)</string>
    <string name="petrus_s2">Solve Petrus S2</string>
    <string name="roux_s2">Solve Roux S2</string>
    <string name="sample_rate">Sampling rate</string>
    <string name="data_format">Data format</string>
    <!-- Others -->
    <string name="cur_scramble">Current scramble</string>
    <string name="scramble_len">"Length: "</string>
    <string name="hint_cross">Hint - Cross</string>
    <string name="hint_xcross">Hint - Xcross</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_length">Enter length (3~1000):</string>
    <string name="stat_save">Save statistics</string>
    <string name="multi_phase_mean">Mean</string>
    <string name="scramble_num">"Number of scramble(1~500): "</string>
    <string name="scramble_type">Scramble type:</string>
    <string name="scramble_path">"Path: "</string>
    <string name="scramble_filename">"File name: "</string>
    <string name="override">Override database</string>
    <string name="default_filename">"scramble.txt"</string>
    <string name="default_stats_name">"stats_%1$s.txt"</string>
    <string name="sel_path">Choose a path</string>
    <string name="downloading">Downloading…</string>
    <string name="import_db">Import</string>
    <string name="export_db">Export</string>
    <string name="import_export">Import/Export</string>
    <string name="week_format">\'W\'w yyyy</string>
    <string name="date_format">d MMM y</string>
    <string name="month_format">MMM yyyy</string>
    <string name="quarter_format">Q%2$d %1$d</string>
    <string name="year_format">yyyy</string>
    <string name="face_top">"turn the top face "</string>
    <string name="face_bottom">"turn the bottom face "</string>
    <string name="face_left">"turn the left face "</string>
    <string name="face_right">"turn the right face "</string>
    <string name="face_front">"turn the front face "</string>
    <string name="face_back">"turn the back face "</string>
    <!-- Share content -->
    <string name="share_c0">"I have finished timing with DCTimer, "</string>
    <string name="share_c1">"I have finished timing %2$s scramble %1$d times with DCTimer, single best: %3$s, average: %4$s, "</string>
    <string name="share_c2">"best avg of %1$d: %2$s, "</string>
    <string name="share_c3">"you can have a try! #DCTimer speedcubing timer for Android"</string>
    <!-- More -->
    <string name="menu_more">More</string>
    <string name="menu_lab">Laboratory</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_website">Websites</string>
    <string name="menu_cubing">Cubing China</string>
    <string name="about_msg">"Version: %1$s\nCopyright © 2012—2022 MeigenChou\nAll rights reserved."</string>
    <string name="feedback_title">Feedback of DCTimer</string>
    <string name="language">en</string>
</resources>
