<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/rbt_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_db" />

        <RadioButton
            android:id="@+id/rbt_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_db"
            android:checked="true"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scramble_path"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btn_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_path"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_scrpath"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dip"
        android:layout_margin="2dip"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textColor="@color/colorText"
        android:gravity="top" />
</LinearLayout>