<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scramble_path"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_scrpath"
            android:layout_width="0dip"
            android:layout_height="42dip"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:inputType="text"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:textColor="@color/colorText"
            android:paddingLeft="3dip"
            android:paddingRight="3dip" />

        <ImageButton
            android:id="@+id/btn_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_path"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scramble_filename"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_scrfile"
            android:layout_width="0dip"
            android:layout_height="42dip"
            android:layout_weight="1"
            android:inputType="text"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:textColor="@color/colorText"
            android:paddingLeft="3dip" />
    </LinearLayout>

</LinearLayout>