<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingLeft="22dp"
    android:paddingRight="22dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_scramble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="#333"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_penalty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:checkedButton="@+id/rb_no_penalty"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_no_penalty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_penalty"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_plus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/penalty_plus2"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_dnf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/penalty_dnf"
                    android:textColor="#333"
                    android:textSize="15sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="#333"
                    android:textSize="16sp"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    android:textColor="#333"
                    android:paddingLeft="3dip"
                    android:paddingRight="3dip" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_solution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="20dp"
                android:background="@color/transparent"
                android:text="@string/btn_solution"
                android:textSize="15sp"
                android:textColor="@drawable/button_text_style"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tv_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#333" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>